Install arm64 sfx

--- a/src/Installers/Windows/WindowsHostingBundle/SharedFramework.wxs
+++ b/src/Installers/Windows/WindowsHostingBundle/SharedFramework.wxs
@@ -9,7 +9,7 @@
                         Name="$(var.SharedFxRedistInstallerx64)"
                         Compressed="yes"
                         Vital="yes"
-                        InstallCondition="VersionNT64 AND (NOT OPT_NO_SHAREDFX OR OPT_NO_SHAREDFX=&quot;0&quot;)"
+                        InstallCondition="(ProcessorArchitecture!=&quot;ARM64&quot;) AND VersionNT64 AND (NOT OPT_NO_SHAREDFX OR OPT_NO_SHAREDFX=&quot;0&quot;)"
                         InstallCommand="/quiet /norestart"
                         RepairCommand="/quiet /repair"
                         Permanent="yes"
@@ -27,10 +27,31 @@
                         Permanent="yes"
                         DetectCondition="SharedFxRedistProductVersion_x86 = v$(var.SharedFxInstallerProductVersionx86)">
             </ExePackage>
+            
+            <!-- OPT_NO_SHAREDFX could be unset at this point, which we explicitly treat as 'false' -->
+            <ExePackage Id="SharedFxRedist_arm64" SourceFile="$(var.InstallersOutputPath)\$(var.SharedFxRedistInstallerarm64)"
+                        Name="$(var.SharedFxRedistInstallerarm64)"
+                        Compressed="yes"
+                        Vital="yes"
+                        InstallCondition="(ProcessorArchitecture=&quot;ARM64&quot;) AND VersionNT64 AND (NOT OPT_NO_SHAREDFX OR OPT_NO_SHAREDFX=&quot;0&quot;)"
+                        InstallCommand="/quiet /norestart"
+                        RepairCommand="/quiet /repair"
+                        Permanent="yes"
+                        DetectCondition="SharedFxRedistProductVersion_arm64 = v$(var.SharedFxInstallerProductVersionarm64)">
+            </ExePackage>
+            
         </PackageGroup>
     </Fragment>
 
     <Fragment>
+        <util:RegistrySearch Id="Arm64_Reg_Check"
+                             Variable="ProcessorArchitecture"
+                             Root="HKLM"
+                             Key="SYSTEM\CurrentControlSet\Control\Session Manager\Environment"
+                             Value="PROCESSOR_ARCHITECTURE"
+                             Result="value"
+                             Format="raw" />
+
         <util:ProductSearch Id="SharedFxRedistProductSearch_x86"
                             Condition="NOT VersionNT64"
                             ProductCode="$(var.SharedFxInstallerProductCodex86)"
@@ -38,9 +59,15 @@
                             Variable="SharedFxRedistProductVersion_x86" />
 
         <util:ProductSearch Id="SharedFxRedistProductSearch_x64"
-                            Condition="VersionNT64"
+                            Condition="(ProcessorArchitecture!=&quot;ARM64&quot;) AND VersionNT64"
                             ProductCode="$(var.SharedFxInstallerProductCodex64)"
                             Result="version"
                             Variable="SharedFxRedistProductVersion_x64" />
+
+        <util:ProductSearch Id="SharedFxRedistProductSearch_arm64"
+                            Condition="(ProcessorArchitecture=&quot;ARM64&quot;) AND VersionNT64"
+                            ProductCode="$(var.SharedFxInstallerProductCodearm64)"
+                            Result="version"
+                            Variable="SharedFxRedistProductVersion_arm64" />
     </Fragment>
 </Wix>
