--- a/src/Installers/Windows/WindowsHostingBundle/DotNetCore.wxs
+++ b/src/Installers/Windows/WindowsHostingBundle/DotNetCore.wxs
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<?include ..\AspNetCoreModule-Setup\IIS-Setup\include.wxi ?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi" xmlns:util="http://schemas.microsoft.com/wix/UtilExtension">
     <Fragment>
         <PackageGroup Id="PG_DOTNET_REDIST_LTS_BUNDLE">
@@ -9,7 +10,7 @@
                         Name="$(var.DotNetRedistLtsInstallerx64)"
                         Compressed="yes"
                         Vital="yes"
-                        InstallCondition="VersionNT64 AND (NOT OPT_NO_RUNTIME OR OPT_NO_RUNTIME=&quot;0&quot;)"
+                        InstallCondition="(NativeMachine=&quot;$(var.NativeMachine_x64)&quot;) AND (NOT OPT_NO_RUNTIME OR OPT_NO_RUNTIME=&quot;0&quot;)"
                         InstallCommand="/quiet /norestart"
                         RepairCommand="/quiet /repair"
                         Permanent="yes"
@@ -27,20 +28,38 @@
                         Permanent="yes"
                         DetectCondition="DotNetRedistLtsProductVersion_x86 = v$(var.DotNetRedistLtsInstallerProductVersionx86)">
             </ExePackage>
+            
+            <ExePackage Id="DotNetRedistLts_arm64" SourceFile="$(var.DepsPath)\$(var.DotNetRedistLtsInstallerarm64)"
+                        Name="$(var.DotNetRedistLtsInstallerx86)"
+                        Compressed="yes"
+                        Vital="yes"
+                        InstallCondition="(NativeMachine=&quot;$(var.NativeMachine_arm64)&quot;) AND (NOT OPT_NO_RUNTIME OR OPT_NO_RUNTIME=&quot;0&quot;)"
+                        InstallCommand="/quiet /norestart"
+                        RepairCommand="/quiet /repair"
+                        Permanent="yes"
+                        DetectCondition="DotNetRedistLtsProductVersion_x86 = v$(var.DotNetRedistLtsInstallerProductVersionx86)">
+            </ExePackage>            
         </PackageGroup>
     </Fragment>
 
     <Fragment>
         <util:ProductSearch Id="DotNetRedistLtsProductSearch_x86"
-                            Condition="NOT VersionNT64"
+                            Condition="(NativeMachine=&quot;$(var.NativeMachine_x86)&quot;)"
                             ProductCode="$(var.DotNetRedistLtsInstallerProductCodex86)"
                             Result="version"
                             Variable="DotNetRedistLtsProductVersion_x86" />
 
         <util:ProductSearch Id="DotNetRedistLtsProductSearch_x64"
-                            Condition="VersionNT64"
+                            Condition="(NativeMachine=&quot;$(var.NativeMachine_x64)&quot;)"
                             ProductCode="$(var.DotNetRedistLtsInstallerProductCodex64)"
                             Result="version"
                             Variable="DotNetRedistLtsProductVersion_x64" />
+
+        <util:ProductSearch Id="DotNetRedistLtsProductSearch_arm64"
+                            Condition="(NativeMachine=&quot;$(var.NativeMachine_arm64)&quot;)"
+                            ProductCode="$(var.DotNetRedistLtsInstallerProductCodearm64)"
+                            Result="version"
+                            Variable="DotNetRedistLtsProductVersion_arm64" />
+        
     </Fragment>
 </Wix>
