--- a/src/Installers/Windows/WindowsHostingBundle/DotNetCore.wxs
+++ b/src/Installers/Windows/WindowsHostingBundle/DotNetCore.wxs
@@ -6,6 +6,18 @@
             <RollbackBoundary Id="RB_DOTNET_REDIST_LTS_BUNDLE" />
 
             <!-- OPT_NO_RUNTIME could be unset at this point, which we explicitly treat as 'false' -->
+            <ExePackage Id="DotNetRedistLts_arm64" SourceFile="$(var.DepsPath)\$(var.DotNetRedistLtsInstallerarm64)"
+                        Name="$(var.DotNetRedistLtsInstallerarm64)"
+                        Compressed="yes"
+                        Vital="yes"
+                        InstallCondition="(NativeMachine=&quot;$(var.NativeMachine_arm64)&quot;) AND (NOT OPT_NO_RUNTIME OR OPT_NO_RUNTIME=&quot;0&quot;)"
+                        InstallCommand="/quiet /norestart"
+                        RepairCommand="/quiet /repair"
+                        Permanent="yes"
+                        DetectCondition="DotNetRedistLtsProductVersion_arm64 = v$(var.DotNetRedistLtsInstallerProductVersionarm64)">
+            </ExePackage>            
+            
+            <!-- OPT_NO_RUNTIME could be unset at this point, which we explicitly treat as 'false' -->
             <ExePackage Id="DotNetRedistLts_x64" SourceFile="$(var.DepsPath)\$(var.DotNetRedistLtsInstallerx64)"
                         Name="$(var.DotNetRedistLtsInstallerx64)"
                         Compressed="yes"
@@ -28,17 +40,6 @@
                         Permanent="yes"
                         DetectCondition="DotNetRedistLtsProductVersion_x86 = v$(var.DotNetRedistLtsInstallerProductVersionx86)">
             </ExePackage>
-            
-            <ExePackage Id="DotNetRedistLts_arm64" SourceFile="$(var.DepsPath)\$(var.DotNetRedistLtsInstallerarm64)"
-                        Name="$(var.DotNetRedistLtsInstallerx86)"
-                        Compressed="yes"
-                        Vital="yes"
-                        InstallCondition="(NativeMachine=&quot;$(var.NativeMachine_arm64)&quot;) AND (NOT OPT_NO_RUNTIME OR OPT_NO_RUNTIME=&quot;0&quot;)"
-                        InstallCommand="/quiet /norestart"
-                        RepairCommand="/quiet /repair"
-                        Permanent="yes"
-                        DetectCondition="DotNetRedistLtsProductVersion_x86 = v$(var.DotNetRedistLtsInstallerProductVersionx86)">
-            </ExePackage>            
         </PackageGroup>
     </Fragment>
 
